remove constructors deprecated in Java 9